--- a/package.json
+++ b/package.json
@@ -4,19 +4,31 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint src/"
   },
   "dependencies": {
     "@blueprintjs/core": "^5.10.1",
     "@blueprintjs/icons": "^5.9.0",
     "@codux-boards/react-blueprint": "^1.0.14",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.0.0",
+    "typescript": "^5.4.3"
   },
   "devDependencies": {
+    "@types/react": "^18.2.67",
+    "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.0.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "vite": "^4.5.2"
   },
   "keywords": [],
-  "description": ""
+  "main": "vite.config.js",
+  "author": "",
+  "license": "ISC"
 }
